deleting standalone for core. added an integration test to test feed genereator bean wire up.